<resources>
    <string name="app_name">AAD Practice Project 2020</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="leaderboard_banner">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="name">Ahmed Hany</string>
    <string name="_223_learning_hours">223 learning hours,</string>
    <string name="country">Kenya</string>
    <string name="skill_iq_score">235 skill IQ score,</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="github_link">Project on GITHUB (link)</string>
    <string name="btn_submit">Submit</string>
    <string name="title_activity_submit">SubmitActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">YES</string>
</resources>